--- a/javascript/package.json
+++ b/javascript/package.json
@@ -12,6 +12,7 @@
     "test:run": "vitest run"
   },
   "devDependencies": {
+    "@vitest/ui": "^0.26.2",
     "vite": "^3.2.3",
     "vitest": "^0.25.8"
   }
